src/test/deca/syntax/valid/created/class_mult_attribut_init.deca
class A{
	int a, b = 5;
}
