src/test/deca/syntax/invalid/created/faux29.deca
class A{
	public int a = 22;
}

{}
